--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="1440px, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
 
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
 
@@ -14,17 +14,29 @@
   <style>
     .attribution {
       font-size: 11px;
-      text-align: center;
+    }
+
+    body{
+      color: hsl(180, 66%, 49%);
+    }
+
+    .Red{
+      color: hsl(0, 87%, 67%);
+    }
+
+    h1,h3{
+      color: hsl(257, 27%, 26%);
     }
 
     .attribution a {
+      background-color: ;
       color: hsl(228, 45%, 44%);
     }
   </style>
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-sm navbar-light bg-primary">
+<body >
+  <nav class="navbar navbar-expand-sm navbar-light bg-primary" 
     <ul>
       <li><a href="index.html">Logo</a></li>
       <li><a href="#features">Features </a></li>
@@ -51,7 +63,7 @@
     </section>
     <section>
       <form action="#">
-        <input type="url" placeholder="Shorten a link here...">
+        <input class= "Red" type="url" placeholder="Shorten a link here...">
         <input type="submit" value="  Shorten It!">
       </form>
     </section>
