--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     .grayColor2:hover a{
       color: white;
-      color: hsl(257, 7%, 63%)
+      color: hsl(257, 7%, 63%);
       background-color: cyan;
     }
 
@@ -90,7 +90,6 @@
     }
 
     .attribution a {
-      background-color: ;
       color: hsl(228, 45%, 44%);
     }
   </style>
